test_case/rust-lang_rust/36307_249612711_1.rs

//~^ ERROR variable `y` from pattern #2 is not bound in pattern #1
